[gd_scene load_steps=13 format=2]

[ext_resource path="res://Potion_House.gd" type="Script" id=1]
[ext_resource path="res://Sprites PI/House_Background.png" type="Texture" id=2]
[ext_resource path="res://Animations/Animation_Container_Potion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Buttons/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Montserrat_48.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites PI/Potions/potionRed.png" type="Texture" id=6]
[ext_resource path="res://Sprites PI/Potions/potionRed_mid.png" type="Texture" id=7]
[ext_resource path="res://Sprites PI/Potions/potionRed_big.png" type="Texture" id=8]
[ext_resource path="res://Sprites PI/Potions/potionGreen.png" type="Texture" id=9]
[ext_resource path="res://Sprites PI/Potions/potionGreen_mid.png" type="Texture" id=10]
[ext_resource path="res://Sprites PI/Potions/potionGreen_big.png" type="Texture" id=11]
[ext_resource path="res://Dialog.tscn" type="PackedScene" id=12]

[node name="Potion_House" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Animation_Container" parent="." index="1" instance=ExtResource( 3 )]

[node name="BackButton" parent="." index="2" instance=ExtResource( 4 )]

anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -141.0
margin_bottom = 66.0
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
text = "Back"
_sections_unfolded = [ "Focus", "Size Flags" ]

[node name="HealthPotionSmall" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 710.0
margin_top = 317.0
margin_right = 762.0
margin_bottom = 396.0
rect_rotation = 0.581336
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Size Flags", "Visibility" ]

[node name="Sprite" type="Sprite" parent="HealthPotionSmall" index="0"]

position = Vector2( 25.9886, 42.9757 )
rotation = 0.667603
texture = ExtResource( 6 )

[node name="HealthPotionMid" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 808.0
margin_top = 306.0
margin_right = 870.0
margin_bottom = 403.0
rect_rotation = -0.431774
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Focus", "Size Flags" ]

[node name="Sprite" type="Sprite" parent="HealthPotionMid" index="0"]

position = Vector2( 30.3832, 48.8307 )
rotation = 0.705632
texture = ExtResource( 7 )

[node name="HealthPotionBig" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 929.0
margin_top = 289.0
margin_right = 1006.0
margin_bottom = 402.0
rect_rotation = 0.0316556
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Focus" ]

[node name="Sprite" type="Sprite" parent="HealthPotionBig" index="0"]

position = Vector2( 38.1675, 54.8258 )
rotation = 0.645873
texture = ExtResource( 8 )

[node name="StaminaPotionSmall" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 361.0
margin_top = 325.0
margin_right = 418.0
margin_bottom = 407.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Focus" ]

[node name="Sprite" type="Sprite" parent="StaminaPotionSmall" index="0"]

position = Vector2( 25.0528, 40.0949 )
rotation = 0.6656
texture = ExtResource( 9 )

[node name="StaminaPotionMid" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 272.0
margin_top = 315.0
margin_right = 331.0
margin_bottom = 402.0
rect_rotation = -2.28873
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Focus" ]

[node name="Sprite" type="Sprite" parent="StaminaPotionMid" index="0"]

position = Vector2( 30.109, 41.4364 )
rotation = 0.704862
texture = ExtResource( 10 )

[node name="StaminaPotionBig" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 181.0
margin_top = 299.0
margin_right = 253.0
margin_bottom = 401.0
rect_rotation = -1.16673
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Focus" ]

[node name="Sprite" type="Sprite" parent="StaminaPotionBig" index="0"]

position = Vector2( 34.4615, 47.8011 )
rotation = 0.695461
texture = ExtResource( 11 )

[node name="Polygon2D" parent="." index="9" instance=ExtResource( 12 )]

visible = false
position = Vector2( 10.5627, 8.77539 )

[node name="Yes" type="Button" parent="." index="10"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 982.0
margin_top = 615.0
margin_right = 1041.0
margin_bottom = 658.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Yes"
flat = false
align = 1

[node name="No" type="Button" parent="." index="11"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1082.0
margin_top = 615.0
margin_right = 1140.0
margin_bottom = 658.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "No"
flat = false
align = 1

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]

[connection signal="pressed" from="HealthPotionSmall" to="." method="_on_HealthPotionSmall_pressed"]

[connection signal="pressed" from="HealthPotionMid" to="." method="_on_HealthPotionMid_pressed"]

[connection signal="pressed" from="HealthPotionBig" to="." method="_on_HealthPotionBig_pressed"]

[connection signal="pressed" from="StaminaPotionSmall" to="." method="_on_StaminaPotionSmall_pressed"]

[connection signal="pressed" from="StaminaPotionMid" to="." method="_on_StaminaPotionMid_pressed"]

[connection signal="pressed" from="StaminaPotionBig" to="." method="_on_StaminaPotionBig_pressed"]

[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]

[connection signal="pressed" from="No" to="." method="_on_No_pressed"]


